--- a/src/main/resources/frontend/index.html
+++ b/src/main/resources/frontend/index.html
@@ -50,15 +50,15 @@
           </div>
           <div class="Slider Slider_carousel">
             <div class="Slider-box Cards" data-load="recommended" data-loadoffset="0" data-loadlimit="6">
-              <div class="Slider-item" th:each="book : ${recommendedBooks}">
+              <div class="Slider-item" th:each="recommendedBook : ${recommendedBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${book.image}" alt="card.jpg"/></a>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${recommendedBook.image}" alt="card.jpg"/></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${book.title}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${recommendedBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description" th:text="${book.author}">Кондратенко Валерий Петрович
+                      <div class="Card-description" th:text="${recommendedBook.author}">Кондратенко Валерий Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld" th:text="${book.priceOld}">₽300.00</span><span class="Card-price" th:text="${book.priceOld}">₽190.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${recommendedBook.priceOld}">₽300.00</span><span class="Card-price" th:text="${recommendedBook.priceOld}">₽190.00</span>
                       </div>
                     </div>
                   </div>
@@ -79,130 +79,18 @@
             </h2>
           </div>
           <div class="Slider Slider_carousel">
-            <div class="Slider-box Cards" data-load="recent" data-loadoffset="8" data-loadlimit="20">
-              <div class="Slider-item">
+            <div class="Slider-box Cards" data-load="recent" data-loadoffset="0" data-loadlimit="6">
+              <div class="Slider-item" th:each="recentBook : ${recentBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img th:src="${recentBook.image}"  src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${recentBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${recentBook.author}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽500.00</span><span class="Card-price">₽390.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>
-                      </strong>
-                      <div class="Card-description">Ваулина, Дули, Подоляко
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
-                      </strong>
-                      <div class="Card-description">Быкова, Дули, Эванс
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Великая Отечественная война. 1941-1945</a>
-                      </strong>
-                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
-                      </strong>
-                      <div class="Card-description">Быкова, Дули, Эванс
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Великая Отечественная война. 1941-1945</a>
-                      </strong>
-                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
-                      </strong>
-                      <div class="Card-description">Быкова, Дули, Эванс
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Великая Отечественная война. 1941-1945</a>
-                      </strong>
-                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Большое путешествие по телу человека</a>
-                      </strong>
-                      <div class="Card-description">Джон Фарндон
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${recentBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${recentBook.priceOld}">₽390.00</span>
                       </div>
                     </div>
                   </div>
@@ -223,122 +111,20 @@
             </h2>
           </div>
           <div class="Slider Slider_carousel">
-            <div class="Slider-box Cards" data-load="popular" data-loadoffset="8" data-loadlimit="20">
-              <div class="Slider-item">
+            <div class="Slider-box Cards" data-load="popular" data-loadoffset="0" data-loadlimit="6">
+              <div class="Slider-item" th:each="popularBook : ${popularBooks}">
                 <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
+                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img  th:src="${popularBook.image}" src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
                       <div class="Card-sale">30% скидка
                       </div>
                       <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
                       </div></a>
                     <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Техника</a>
+                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}" th:text="${popularBook.title}">Техника</a>
                       </strong>
-                      <div class="Card-description">Кондратенко Александр Петрович
+                      <div class="Card-description" th:text="${popularBook.author}">Кондратенко Александр Петрович
                       </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽500.00</span><span class="Card-price">₽390.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>
-                      </strong>
-                      <div class="Card-description">Ваулина, Дули, Подоляко
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
-                      </strong>
-                      <div class="Card-description">Быкова, Дули, Эванс
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
-                      <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                      </div></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Великая Отечественная война. 1941-1945</a>
-                      </strong>
-                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 5 класс. Английский в фокусе. Рабочая тетрадь. ФГОС</a>
-                      </strong>
-                      <div class="Card-description">Ваулина, Дули, Подоляко
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Английский язык. 4 класс. Английский в фокусе. Рабочая тетрадь</a>
-                      </strong>
-                      <div class="Card-description">Быкова, Дули, Эванс
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/>
-                      <div class="Card-ribbon"><span class="Card-ribbonText">Бестселлер</span>
-                      </div></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Великая Отечественная война. 1941-1945</a>
-                      </strong>
-                      <div class="Card-description">Солопенко Алла, Меркулов Дмитрий
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="Slider-item">
-                <div class="Slider-content">
-                  <div class="Card"><a class="Card-picture" href="/books/slug.html" th:href="@{/books/slug}"><img src="/assets/img/content/main/card.jpg" alt="card.jpg"/></a>
-                    <div class="Card-content">
-                      <strong class="Card-title"><a href="/books/slug.html" th:href="@{/books/slug}">Большое путешествие по телу человека</a>
-                      </strong>
-                      <div class="Card-description">Джон Фарндон
-                      </div>
-                      <div class="Card-cost"><span class="Card-priceOld">₽300.00</span><span class="Card-price">₽190.00</span>
+                      <div class="Card-cost"><span class="Card-priceOld" th:text="${popularBook.priceOld}">₽500.00</span><span class="Card-price" th:text="${popularBook.priceOld}">₽390.00</span>
                       </div>
                     </div>
                   </div>
